--- a/charts/wrapper_argo-cd/values.yaml
+++ b/charts/wrapper_argo-cd/values.yaml
@@ -2,6 +2,8 @@ argo-cd:
   dex:
     enabled: false
   server:
+    service:
+      type: LoadBalancer
     extraArgs:
       - --insecure
     config:
