--- a/apps/templates/istio.yaml
+++ b/apps/templates/istio.yaml
@@ -21,6 +21,8 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
 
 ---
 ---
@@ -46,4 +48,6 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
 
