--- a/apps/templates/fluentbit.yaml
+++ b/apps/templates/fluentbit.yaml
@@ -33,6 +33,10 @@ spec:
                 syslog_sd_key        sd
                 syslog_message_key   message
 
+            [OUTPUT]
+                name                 stdout
+                match                *
+
     repoURL: https://fluent.github.io/helm-charts
     targetRevision: 0.20.9
   syncPolicy:
