Revert "rm stdout"
This reverts commit f3d1744ba9d386ddb2a624d855626218faea4602.

--- a/apps/templates/fluentbit.yaml
+++ b/apps/templates/fluentbit.yaml
@@ -33,6 +33,9 @@ spec:
                 syslog_sd_key        kubernetes
                 syslog_message_key   message
 
+            [OUTPUT]
+                name                 stdout
+                match                *
 
     repoURL: https://fluent.github.io/helm-charts
     targetRevision: 0.20.9
